Fix VAST banner alignment to the right in header

--- a/src/style.css
+++ b/src/style.css
@@ -2252,6 +2252,7 @@ iframe[id*="pro-"] {
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
 #vast-banner-video {
